# welcome

./: .gitignore  CMakeCache.txt  CMakeLists.txt  lubuntuWelcomeCenter.pro  lubuntuWelcomeCenter.pro.user.3ad3f86  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  welcomecenterresource.qrc  window.cpp  window.h
images/: Lubuntu Logo.xcf.bz2
mockup/: mockup_notes.txt
